TBBETA-474: Convert swagger.js to swagger.json for use by API Gateway (#24)
* Add swagger-integrations script to clinic service deploy workflow:
- add swagger-integrations.js to clinic-service
- rename deploy job
- retrieve URI secrets to insert into swagger spec
- add step to run swagger-integrations script
- add push trigger for testing

* Fix build & zip steps in clinic-service deploy workflow

* Add build script to clinic-service package.json

* Revert "Add build script to clinic-service package.json"

This reverts commit b79176d74eb004fac224bd3c913fb1b2b08c53d0.

* Revert "Fix build & zip steps in clinic-service deploy workflow"

This reverts commit c7bdc57f35bbdaff7b51315e0b20b3c6d0020e6b.

* Remove deployment of build from pipeline for testing

* Fix swagger-integrations working directory in pipeline

* Add export statement to swagger-integrations

* Remove export statement from swagger-integrations

* Add console.logs for testing

* Revert "Add console.logs for testing"

This reverts commit 41947b185cfa7dfc2088e45af7528ae7b4a71abf.

* Upload swagger with integration blocks to s3

* Remove declarative keywords in script

* Modify swagger-integrations to return an object instead of a list

* Modify swagger-integrations to return a 1D array

* Deploy entire output of swagger-integrations instead of splitting

* Modify swagger-integrations to return a string

* Modify swagger-integrations to return a string

* Move swagger-integrations to inline in deploy pipeline

* Write swagger to file to upload to s3

* Convert swagger to string before uploading to s3

* Fix s3 upload working directory

* Add console log at start of script

* Add additional console logs

* Add additional console log

* Fix .split step to split on \n instead of \r\n

* Fix .split step in swagger-integrations

* Update pipeline to use fixed swagger-integrations script

* Cast swagger-integrations output to string

* Add expor

--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy handler & swagger files
+    name: Deploy build & swagger spec
     runs-on: ubuntu-latest
     environment: test
 
@@ -33,11 +33,18 @@ jobs:
       - name: Get secrets from AWS
         uses: aws-actions/aws-secretsmanager-get-secrets@v2
         with:
-          secret-ids: test/ClinicServiceDeploy
+          secret-ids: |
+            test/ClinicServiceDeploy
+            Clinic_Service_URIs
           parse-json-secrets: true
       - name: Upload Clinic Service to S3
         working-directory: core-services/clinic-service
         run: aws s3 cp clinic-service-lambda.zip s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Process Swagger file
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const script = require('./.github/scripts/swagger-integrations.js')
+            script(context)
       - name: Upload Swagger file to S3
-        working-directory: core-services/clinic-service/swagger
-        run: aws s3 cp swagger.js s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
+        run: aws s3 cp swagger.json s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
