TBBETA-466: Connect clinic service to remote Dynamo DB table (#23)
* TBBETA-466: connect clinic service lambda to local and remote DB based on BRANCH env variable

* create build script for typescript

* fix duplicate lines error

* fix sonarcloud issues

* undo changes to clinic-service-deploy yaml

* run deploy workflow on push

* run deploy workflow on push

* add step to install yarn dependencies

* fix ref to build folder

* update zip command

* update zip command

* setup lambda to run in aws

* Create windows-compatible test script & fix start script in clinic service

* Deploy clinic service non-dev node modules to S3 in pipeline

* Fix build step in clinic service pipeline

* Fix build step in clinic service pipeline

* Fix zip step in clinic service pipeline

* Fix zip step in clinic service pipeline

* Fix create package.json step in clinic service pipeline

* Test syncing full node modules to s3

* Fix zip steps in clinic service pipeline

* Update clinic service test deployment pipeline to mirror dev pipeline

* Add push trigger for testing

* Add push trigger for testing

* Revert "Add push trigger for testing"

This reverts commit 47dd2a9a87d99cbafe2ccfa62ee7cacf7f01fb73.

* Revert "Add push trigger for testing"

This reverts commit ccbd9f66ce98a255b8ba422e397ec03dfffd6361.

* Remove push triggers

* edit build script

* Move serverless packages to dev dependencies

* Move script for zipping node modules from inline to separate file

* Fix zip-node-modules script

* Implement correct lambda layer folder structure into pipeline

* Fix secret names in dev deployment pipeline

* update db name

* fixed failing unit tests

* updated configutation unit test

* Move zip-node-modules to .github/scripts

* Fix zip-node-modules script file path

* Remove module exports from zip-node-modules

* Add update lambda code step to deployment pipeline

* Fix script step in deployment 

--- a/core-services/clinic-service/src/config/config.yml
+++ b/core-services/clinic-service/src/config/config.yml
@@ -2,25 +2,29 @@ dynamodb:
  local:
    params:
      region: localhost
-     endpoint: http://127.0.0.1:8000
+     endpoint: http://127.0.0.1:8007
    table: pets-local-clinics
  local-global:
    params:
      region: localhost
-     endpoint: http://127.0.0.1:8000
+     endpoint: http://127.0.0.1:8007
    table: pets-local-global-clinics
  remote:
    params: {}
-   table: pets-${BRANCH}-clinics
+   table: pets-clinics
 
-# functions:
-#   - getTestStations:
-#       method: GET
-#       path: /test-stations
-#       proxy: null
-#       function: getTestStations
-#   - getTestStation:
-#       method: GET
-#       path: /test-stations/{+proxy}
-#       proxy: :testStationPNumber
-#       function: getTestStation
+functions:
+  - getPetsClinics:
+      method: GET
+      path: /clinics
+      proxy: null
+      function: getPetsClinics
+  - getPetsClinic:
+      method: GET
+      path: /clinics/{+proxy}
+      proxy: :petsClinicId
+      function: getPetsClinic
+
+serverless:
+  basePath: /${BRANCH}
+  port: 3004
