--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "govuk-frontend": "^5.4.1",
-    "next": "14.2.5",
+    "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
