TBBETA-63: Disabling fetching vulnerability alert

--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,9 @@
       "matchPackageNames": ["*"]
     }
   ],
+  "vulnerabilityAlerts": {
+    "enabled": false,
+    "_comment": "false because renovate does not have access to vulnerability alert"
+  },
   "osvVulnerabilityAlerts": true
 }
