--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint --quiet .",
     "preview": "vite preview",
     "cypress": "cypress open",
-    "test": "vitest run --coverage",
+    "test": "vitest run",
+    "test-coverage": "vitest run --coverage",
     "cypress:open": "cypress open -C cypress/cypress.config.mjs"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.2.1",
+    "@azure/msal-react": "^3.0.4",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
     "govuk-frontend": "^5.7.1",
+    "msal-react-tester": "^0.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
