--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
   "pnpm": {
     "overrides": {
       "cross-spawn": "^7.0.6",
+      "dompurify": "^3.2.4",
+      "esbuild": "^0.25.1",
       "micromatch": "^4.0.8",
       "nanoid": "^3.3.8",
-      "@eslint/plugin-kit": "^0.2.5"
+      "prismjs": "^1.30.0",
+      "@eslint/plugin-kit": "^0.2.5",
+      "@babel/runtime": "^7.26.10"
     }
   }
 }
