--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
   },
   "pnpm": {
     "overrides": {
+      "@babel/runtime": "^7.26.10",
+      "@eslint/plugin-kit": "^0.2.5",
       "cross-spawn": "^7.0.6",
+      "dompurify": "^3.2.4",
+      "esbuild": "^0.25.1",
       "micromatch": "^4.0.8",
       "nanoid": "^3.3.8",
-      "@eslint/plugin-kit": "^0.2.5"
+      "prismjs": "^1.30.0"
     }
   }
 }
