--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
     "@types/node": "^22.13.4",
-    "@vitest/coverage-v8": "2.1.8",
+    "@vitest/coverage-v8": "^2.1.9",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.20.1",
@@ -54,7 +54,8 @@
       "esbuild": "^0.25.1",
       "micromatch": "^4.0.8",
       "nanoid": "^3.3.8",
-      "prismjs": "^1.30.0"
+      "prismjs": "^1.30.0",
+      "vite": "^5.4.17"
     }
   }
 }
